--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,48 +3,58 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="well">
-    <div class="field">
-      <%= f.label :email %>
-      <%= f.email_field :email %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="well">
+        <div class="row">
+          <%= f.label :email, class: "col-md-2 text-right" %>
+          <%= f.email_field :email, class: "col-md-9"  %>
+        </div>
+
+        <div class="row">
+          <%= f.label :first_name, class: "col-md-2 text-right" %>
+          <%= f.text_field :first_name, class: "col-md-9" %>
+        </div>
+
+        <div class="row">
+          <%= f.label :last_name, class: "col-md-2 text-right" %>
+          <%= f.text_field :last_name, class: "col-md-9" %>
+        </div>
+
+        <div class="row">
+          <%= f.label :phone, class: "col-md-2 text-right" %>
+          <%= f.text_field :phone, class: "col-md-9" %>
+        </div>
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name %>
-    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <div class="field">
+          <%= f.label :password %> <i><%= t "devise.registrations.edit.new_password_info" %></i><br/>
+          <%= f.password_field :password, :autocomplete => "off" %>
+        </div>
 
-    <div class="field">
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name %>
-    </div>
-
-    <div class="field">
-      <%= f.label :phone %>
-      <%= f.text_field :phone %>
+        <div class="field top-buffer-20">
+          <%= f.label :password_confirmation %><br/>
+          <%= f.password_field :password_confirmation %>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="well">
-    <div class="field">
-      <%= f.label :password %> <i><%= t "devise.registrations.edit.new_password_info" %></i><br/>
-      <%= f.password_field :password, :autocomplete => "off" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation %>
-    </div>
-  </div>
-
-  <div class="well">
-    <div class="field">
-      <%= f.label :current_password %> <i><%= t "devise.registrations.edit.current_password_info" %></i><br/>
-      <%= f.password_field :current_password %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="well">
+        <div class="field">
+          <%= f.label :current_password %> <i><%= t "devise.registrations.edit.current_password_info" %></i><br/>
+          <%= f.password_field :current_password%>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div><%= f.submit t "devise.registrations.edit.submit_button" %></div>
+  <div class="actions">
+    <%= f.submit t("devise.registrations.edit.submit_button"), class: "btn btn-sm btn-success" %>
+  </div>
 <% end %>
-
-<%= link_to "Powrót", :back %>
