--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -1,19 +1,19 @@
 <div class="row top-buffer-40">
-  <div class="span6">
+  <div class="col-md-6">
     <% if @journal.is_open? %>
       <small>
         <% if can? :update, @journal %>
-          <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => false), class: 'btn btn-small btn-primary' do%>
+          <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => false), class: 'btn btn-sm btn-success' do%>
             <i class="icon-plus"></i>&nbsp;&nbsp;Nowy wpływ
           <% end %>
         <% end %>
         <% if can? :update, @journal %>
-          <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => true), class: 'btn btn-small btn-primary' do%>
+          <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => true), class: 'btn btn-sm btn-success' do%>
             <i class="icon-minus"></i>&nbsp;&nbsp;Nowy wydatek
           <% end %>
         <% end %>
         <% if can? :close, @journal %>
-          <%= link_to close_journal_path, class: 'btn btn-small btn-danger' do%>
+          <%= link_to close_journal_path, class: 'btn btn-sm btn-danger' do%>
             Zamknij książkę
           <% end %>
         <% end %>
@@ -21,16 +21,14 @@
     <% else %>
       <span class="label label-info">Książka zamknięta</span>
       <% if can? :open, @journal %>
-        <%= link_to open_journal_path, class: 'btn btn-small btn-danger' do%>
+        <%= link_to open_journal_path, class: 'btn btn-sm btn-danger' do%>
           Otwórz książkę
         <% end %>
       <% end %>
     <% end %>
   </div>
-  <div class="span6">
-    <div class="pull-right">
-      <%= render "shared/journal_select" %>
-    </div>
+  <div class="col-md-6">
+    <%= render "shared/journal_select" %>
   </div>
 </div>
 
