--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,17 +3,17 @@
 <div class="well">
   <div class="pull-right">
     <% if can? :update, @user %>
-        <%= link_to 'Edytuj', edit_user_path(@user), :class => "btn btn-small btn-primary", :accesskey => 'e' %>
+        <%= link_to 'Edytuj', edit_user_path(@user), :class => "btn btn-sm btn-success", :accesskey => 'e' %>
         <% if @user.is_blocked %>
             <%= link_to  'Odblokuj', unblock_user_path(@user),
                          data: { confirm: 'Czy chcesz pozwolić użytkownikowi na zalogowanie się?'},
                          :title => 'Umożliwia użytkownikowi zalogowanie się',
-                         :class => "btn btn-small btn-danger" %>
+                         :class => "btn btn-sm btn-danger" %>
         <% else %>
             <%= link_to 'Zablokuj', block_user_path(@user),
                         data: { confirm: 'Czy chcesz zablokować możliwość zalogowania się?'},
                         :title => 'Pozbawia użytkownika możliwości zalogowania się',
-                        :class => "btn btn-small btn-danger" %>
+                        :class => "btn btn-sm btn-danger" %>
         <% end %>
     <% end %>
     <% if current_user.is_superadmin %>
@@ -21,12 +21,12 @@
             <%= link_to 'Zdegraduj', demote_user_path(@user),
                         data: { confirm: 'Pozbawić użytkownika roli superadmina?'},
                         :title => 'Pozbawia użytkownika roli superadmina',
-                        :class => "btn btn-small btn-danger" %>
+                        :class => "btn btn-sm btn-danger" %>
         <% else %>
             <%= link_to 'Awansuj', promote_user_path(@user),
                         data: { confirm: 'Awansować użytkownika do roli superadmina?'},
                         :title => 'Awansuje użytkownika do roli superadmina',
-                        :class => "btn btn-small btn-danger" %>
+                        :class => "btn btn-sm btn-danger" %>
         <% end %>
     <% end %>
   </div>
@@ -136,6 +136,6 @@
 
 <!--%= debug @user %-->
 <p>
-  <%= link_to 'Powrót do listy', users_path, :accesskey => 'l', :class => "btn btn-small" %>
+  <%= link_to 'Powrót do listy', users_path, :accesskey => 'l', :class => "btn btn-sm" %>
 
 </p>
