--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,27 +1,34 @@
 <%= form_for(@group) do |f| %>
   <% if @group.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@group.errors.count, "error") %> prohibited this group from being saved:</h2>
+    <div class="row">
+      <div id="error_explanation">
+        <h2><%= pluralize(@group.errors.count, "error") %> prohibited this group from being saved:</h2>
 
-      <ul>
-      <% @group.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @group.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="row-fluid top-buffer-20">
-    <%= f.label :name %>
-    <%= f.text_field :name, class: "span6" %>
+  <div class="row top-buffer-20">
+    <div class="col-md-6">
+      <%= f.label :name %><br/>
+      <%= f.text_field :name, class: "col-md-12"%>
+    </div>
+    <div class="col-md-1 col-md-offset-5">
+      <div class="actions">
+        <%= f.submit "Zapisz", class: "btn btn-sm btn-success" %>
+      </div>
+    </div>
   </div>
 
-  <div class="row-fluid top-buffer-20">
-    <%= f.label :unit_ids %>
-    <%= f.select :unit_ids, @units.collect { |u| [ u.name, u.id ] }, { :include_blank => "(Brak przypisanych drużyn)" }, :multiple => true, class: "span6" %>
-  </div>
-  
-  <div class="actions top-buffer-20">
-    <%= f.submit "Aktualizuj grupę", class: "btn" %>
+  <div class="row">
+    <div class="col-md-6 top-buffer-20">
+      <%= f.label :unit_ids %><br/>
+      <%= f.select :unit_ids, @units.collect { |u| [ u.name, u.id ] }, { :include_blank => "(Brak przypisanych drużyn)" }, :multiple => true, class: "col-md-12" %>
+    </div>
   </div>
 <% end %>
