--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <h3>Administracja > Grupy jednostek</h3>
 
 <div class="row top-buffer-40">
-  <div class="span12">
+  <div class="col-md-12">
     <table class="table table-hover ">
       <thead>
         <tr>
@@ -36,7 +36,7 @@
 </div>
 
 <div class="row top-buffer-40">
-  <div class="span12">
-    <%= link_to 'Utwórz nową grupę', new_group_path, class: "btn btn-small btn-primary" %>
+  <div class="col-md-12">
+    <%= link_to 'Utwórz nową grupę', new_group_path, class: "btn btn-sm btn-success" %>
   </div>
 </div>
