--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,10 @@
 <div class="well">
   <div class="pull-right">
     <% if can? :update, @group %>
-        <%= link_to "Edytuj", edit_group_path(@group), class: 'btn btn-small btn-primary' %>
+        <%= link_to "Edytuj", edit_group_path(@group), class: 'btn btn-sm btn-success' %>
     <% end %>
     <% if can? :destroy, @group %>
-        <%= link_to 'Usuń grupę', @group, data: { confirm: 'Na pewno usunąć grupę?'}, method: :delete, class: 'btn btn-small btn-danger' %>
+        <%= link_to 'Usuń grupę', @group, data: { confirm: 'Na pewno usunąć grupę?'}, method: :delete, class: 'btn btn-sm btn-danger' %>
     <% end %>
   </div>
   <div>
@@ -53,14 +53,14 @@
         <% end %>
       </table>
       <% if can? :create, UserGroupAssociation %>
-          <%= link_to 'Przypisz użytkownika', new_user_group_association_path(:group_id => @group.id, :from => "group"), class: 'btn btn-small btn-primary' %>
+          <%= link_to 'Przypisz użytkownika', new_user_group_association_path(:group_id => @group.id, :from => "group"), class: 'btn btn-sm btn-success' %>
       <% end %>
     </div>
   </fieldset>
 </div>
 
 <div class="row">
-  <div class="span4">
+  <div class="col-md-4">
     <div class="well well-small top-buffer-20">
       <fieldset>
         <legend><small>Jednostki</small></legend>
@@ -77,7 +77,7 @@
 </div>
 
 <div class="row">
-  <div class="span12">
-    <%= link_to 'Powrót do listy', groups_path, class: 'btn btn-small' %>
+  <div class="col-md-12">
+    <%= link_to 'Powrót do listy', groups_path, class: 'btn btn-sm' %>
   </div>
 </div>
