--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="row">
-    <div class="span6">
+    <div class="col-md-6">
       <div class="field">
         <%= f.label :data %>
         <%= f.text_field :date %>
