--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,13 @@
 <div class="well well-small" style="margin-top: 60px">
-  <div class="span3 text-left">
-    <b><a href="http://ziher.zhr.pl/beta">ZiHeR</a></b> - wersja <a href="https://github.com/zhr/ziher/commit/<%= ApplicationController::ZIHER_COMMIT %>"><%= ApplicationController::ZIHER_VERSION %></a>
-  </div>
-  <div class="span3 offset1 text-center">
-    <a href="http://www.zhr.pl">Związek Harcerstwa Rzeczypospolitej</a>
-  </div>
-  <div class="span3 offset1 text-right">
-    Kontakt: <b><a href="mailto:ziher@zhr.pl">ziher@zhr.pl</a></b>
+  <div class="row">
+    <div class="col-md-3 text-left">
+      <b><a href="http://ziher.zhr.pl/beta">ZiHeR</a></b> - wersja <a href="https://github.com/zhr/ziher/commit/<%= ApplicationController::ZIHER_COMMIT %>"><%= ApplicationController::ZIHER_VERSION %></a>
+    </div>
+    <div class="col-md-4 col-md-offset-1 text-center">
+      <a href="http://www.zhr.pl">Związek Harcerstwa Rzeczypospolitej</a>
+    </div>
+    <div class="col-md-3 col-md-offset-1 text-right">
+      Kontakt: <b><a href="mailto:ziher@zhr.pl">ziher@zhr.pl</a></b>
+    </div>
   </div>
 </div>
