--- a/app/views/shared/_inventory_entries_select.html.erb
+++ b/app/views/shared/_inventory_entries_select.html.erb
@@ -1,10 +1,14 @@
-<script type="text/javascript">
- function selectedUnitChanged(unitId) {
-   document.location.href = "<%= inventory_entries_path %>?unit_id=" + unitId.toString();
- }
-</script>
-<select onchange="selectedUnitChanged(this.value)" class="span4">
-  <% @user_units.each do |unit| %>
-    <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.name %></option>
-  <% end %>
-</select>
+<div class="row">
+  <script type="text/javascript">
+   function selectedUnitChanged(unitId) {
+     document.location.href = "<%= inventory_entries_path %>?unit_id=" + unitId.toString();
+   }
+  </script>
+  <div class="col-md-10 col-md-offset-2">
+    <select onchange="selectedUnitChanged(this.value)" style="padding: 0; width:100%;">
+      <% @user_units.each do |unit| %>
+        <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.name %></option>
+      <% end %>
+    </select>
+  </div>
+</div>
