W poszukiwaniu zaginionych ikon

--- a/app/views/inventory_entries/index.html.erb
+++ b/app/views/inventory_entries/index.html.erb
@@ -3,12 +3,12 @@
     <small>
       <% if can? :update, @inventory_entry %>
         <%= link_to new_inventory_entry_path(:is_expense => false), class: 'btn btn-sm btn-success' do %>
-          <i class="icon-plus"></i>&nbsp;&nbsp;Nowy przychód
+          <span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;Nowy przychód
         <% end %>
       <% end %>
       <% if can? :update, @inventory_entry %>
         <%= link_to new_inventory_entry_path(:is_expense => true), class: 'btn btn-sm btn-success' do %>
-          <i class="icon-minus"></i>&nbsp;&nbsp;Nowy rozchód
+          <span class="glyphicon glyphicon-minus"></span>&nbsp;&nbsp;Nowy rozchód
         <% end %>
       <% end %>
     </small>
