--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -49,7 +49,7 @@
     <tr class="border-top-bold">
       <th rowspan="2" class="valign_middle"><small>#</small></th>
       <th rowspan="2" class="valign_middle text-center"><small>Data</small></th>
-      <th rowspan="2" class="valign_middle text-center"><small>Treść</small></th>
+      <th rowspan="2" class="valign_middle text-center"><small>Opis<br/>Numer dokumentu</small></th>
       <th colspan="<%= @categories_income.count %>" class="text-center"><small><%=t 'helpers.label.journal.income_detailed'%></small></th>
       <th rowspan="2" class="income income_all valign_middle text-center"><small><%=t 'helpers.label.journal.income_all'%></small></th>
       <th rowspan="2" class="expense expense_all valign_middle text-center"><small><%=t 'helpers.label.journal.expense_all'%></small></th>
