--- a/app/views/units/edit.html.erb
+++ b/app/views/units/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Anuluj', @unit %> |
-<%= link_to 'Lista', units_path %>
+<%= link_to 'Powrót do list', units_path, :class => "btn btn-sm btn-default top-buffer-20" %>
