--- a/app/views/units/new.html.erb
+++ b/app/views/units/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Wstecz', units_path %>
+<%= link_to 'Powrót do listy', units_path, :class => "btn btn-sm btn-default top-buffer-20" %>
