--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Powrót', users_path %>
+<%= link_to 'Powrót', users_path, :class => "btn btn-sm btn-default top-buffer-20" %>
