Datepicker daje do wyboru tylko daty poprawne dla danej książki (z danego roku) #71

--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag(:div, "", id: 'journal-year', data: {source: @journal.year}) %>
+
 <%= form_for(@entry) do |f| %>
   <% if @entry.errors.any? %>
     <div id="error_explanation">
