--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(@entry) do |f| %>
   <% if @entry.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
+      <h2>Wystąpiły błędy podczas próby zapisu:</h2>
 
       <ul>
       <% @entry.errors.full_messages.each do |msg| %>
