--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -18,7 +18,7 @@
         <% else %>
             <% user = User.find(audit.user_id) %>
             <% if user.name == ' ' %>
-                <td><%= link_to user, user %> </td>
+                <td><%= link_to user.email, user %> </td>
             <% else %>
                 <td><%= link_to user.name, user %> </td>
             <% end %>
