--- a/app/views/reports/report_template.html.erb
+++ b/app/views/reports/report_template.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row">
   <div class="col-md-10">
-    <h3>Administracja &gt; Raport całościowy</h3>
+    <h3><%= @report_header %></h3>
   </div>
   <div class="col-md-2">
     <div class="pull-right top-buffer-20">
