Bugfix: nie używaj nazwy kategorii jako klucza, bo mogą się powtarzać we wpływach i wydatkach #78

--- a/app/views/reports/report_template.html.erb
+++ b/app/views/reports/report_template.html.erb
@@ -38,8 +38,8 @@
         <% @categories.where(:is_expense => false).each do |category| %>
             <tr>
               <td><%= category.name %></td>
-              <td><%= @finance_hash[category.name] %></td>
-              <td><%= @bank_hash[category.name] %></td>
+              <td><%= @finance_hash[category.id] %></td>
+              <td><%= @bank_hash[category.id] %></td>
             </tr>
         <% end %>
       </tbody>
@@ -66,8 +66,8 @@
         <% @categories.where(:is_expense => true).each do |category| %>
             <tr>
               <td><%= category.name %></td>
-              <td><%= @finance_hash[category.name] %></td>
-              <td><%= @bank_hash[category.name] %></td>
+              <td><%= @finance_hash[category.id] %></td>
+              <td><%= @bank_hash[category.id] %></td>
             </tr>
         <% end %>
       </tbody>
