Bugfix: po zmianie roku pozostań w aktualnie oglądanym raporcie #78

--- a/app/views/reports/report_template.html.erb
+++ b/app/views/reports/report_template.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     function reloadForYear(year) {
-        document.location.href = "<%= all_finance_report_path %>?year=" + year;
+        document.location.href = "<%= @report_link %>?year=" + year;
     }
 </script>
 
